# first-passage-percolation

./: LICENSE  README.md  example.ipynb  pyproject.toml
.github/workflows/: python-publish.yml
src/first_passage_percolation_sim/: __init__.py  fpp.py  fpp.pyi
tests/: __init__.py
